--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "test": "npm run test-compile && node ./out/test/runTests.js",
     "prepare": "husky install",
     "package": "vsce package",
-    "install": "code --install-extension able-0.0.1.vsix",
-    "publish": "vsce publish --no-dependencies"
+    "install": "code --install-extension able-0.0.1.vsix"
   },
   "activationEvents": [
     "onStartupFinished"
