--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "able",
-  "displayName": "ABLE",
+  "name": "code-able",
+  "displayName": "code-able",
   "version": "0.0.1",
   "description": "",
   "publisher": "thevoyagingstar",
