--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-able",
   "displayName": "code-able",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "publisher": "thevoyagingstar",
   "author": "Umang Rajpara",
@@ -47,7 +47,7 @@
     "client",
     "code runner"
   ],
-  "main": "out/extension.js",
+  "main": "./out/extension.js",
   "scripts": {
     "vscode:prepublish": "npm run build",
     "compile": "cross-env NODE_ENV=development ts-node --files -P ./scripts/tsconfig.json ./scripts",
@@ -58,7 +58,7 @@
     "test": "npm run test-compile && node ./out/test/runTests.js",
     "prepare": "husky install",
     "package": "vsce package",
-    "install": "code --install-extension able-0.0.1.vsix"
+    "install": "code --install-extension code-able-0.0.2.vsix"
   },
   "activationEvents": [
     "onStartupFinished"
